Revision history for Perl module CBOR::Free

0.30
- BUG FIX: The decoder no longer leaks an extra reference on indirect values.
- BUG FIX: The decoder no longer leaks a scalar on indefinite-length strings.
- BUG FIX: The decoder no longer leaks arrays or hashes on errant input.
- Add new sequence decoder module.
- Add new character encoding/decoding options.
- Decoder: make hash key storage a bit more efficient if the key
  is encoded as an indefinite-length string.

0.23 8 April 2020
- Fix encoding of “magical” scalars and hashes.
  (Thanks to ATOOMIC for identifying the issue!)
- Silence a few inconsequential compiler warnings.
- Remove CI files from MANIFEST.

0.22 11 Feb 2020
- Fix compilation on Perl 5.10.0. (i.e., supply missing HeUTF8 macro)
- Fix out-of-range error reporting on pre-5.24 64-bit Windows perls.

0.21 6 Feb 2020
- Make tests ignore inconsistent Inf detection in pre-5.22 perls on Linux 5.4+.

0.20 31 Jan 2020
- Update test requirements to avoid dev release of Test::Class::Tiny.

0.19 30 Jan 2020
- BUG FIX: Properly validate UTF-8 map keys when decoding.
- InvalidUTF8 errors now correctly handle NULs in the invalid string.

0.18 19 Jan 2020
- BREAKING CHANGE: Encode UTF8-flagged hash keys as CBOR text.
- BUG FIX: Properly decoded hash keys that contain code points 128-255 were
  previously mangled. This release fixes that.
- BUG FIX: Decode CBOR text strings as UTF8-flaged Perl strings.
  This is an admittedly-imperfect attempt to preserve distinctly-typed text
  strings in Perl (a language that, by design, doesn’t distinguish text vs.
  binary). The POD has described this behavior for some time; it just was never
  implemented correctly until now.
- Add (EXPERIMENTAL) “text_keys” encode mode, which causes all CBOR map keys
  to be text. This requires proper character decoding!
- Add native_utf8() decode mode, which skips UTF-8 validation in decoding.
- Build fix: Require a reasonably recent ExtUtils::MakeMaker.

0.17 17 Jan 2020